--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_PATH=./ browserifyinc webapp/index.js -t babelify --extensions=.js -v | NODE_ENV=production loose-envify | uglifyjs --compress 'dead_code' > ./public/bundle.js",
-    "watch": "NODE_PATH=./ watchify webapp/index.js -t [ babelify ] -p [ browserify-hmr -h 0.0.0.0 ] --extensions=.js -o 'NODE_ENV=development loose-envify | exorcist ./public/bundle.js.map > ./public/bundle.js' -v -d"
+    "build": "NODE_ENV=production NODE_PATH=./ browserify webapp/index.js -t [ rollupify --config rollup.config.js ] > ./public/bundle.js",
+    "watch": "NODE_PATH=./ watchify webapp/index.js -t [ rollupify --config rollup.config.js ] -p [ browserify-hmr -h 0.0.0.0 ] -o ./public/bundle.js"
   },
   "author": "subuta <shunta.3110@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@hocs/debounce-handler": "^0.3.0",
     "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "recompose": "^0.26.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -26,15 +26,16 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "babel-runtime": "^6.25.0",
+    "browserify": "^14.5.0",
     "browserify-hmr": "^0.3.5",
-    "browserify-incremental": "^3.1.1",
-    "exorcist": "^0.4.0",
-    "loose-envify": "^1.3.1",
-    "standard": "^10.0.2",
-    "uglify-js": "^3.0.4",
-    "watchify": "^3.9.0",
+    "rollup": "^0.45.2",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.1.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "rollupify": "^0.4.0",
-    "babelify": "^8.0.0",
-    "browserify": "^14.5.0"
+    "standard": "^10.0.2",
+    "uglify-es": "^3.1.8",
+    "watchify": "^3.9.0"
   }
 }
